Edited text through the whole app

--- a/angular-app/src/app/home-view/project-list/project-list.component.html
+++ b/angular-app/src/app/home-view/project-list/project-list.component.html
@@ -9,7 +9,7 @@
         <a matLine>{{project.name}}</a>
         <p matLine> {{project.desc}}</p>
       </div>
-      <button class="deleteButton" mat-button (click)="deleteProject(project.name)">Delete me</button>
+      <button class="deleteButton" mat-button (click)="deleteProject(project.name)">Slet</button>
     </mat-list-item>
 
   </div>
