--- a/angular-app/src/app/project-view/query-setting-view/query-setting-view.component.html
+++ b/angular-app/src/app/project-view/query-setting-view/query-setting-view.component.html
@@ -9,7 +9,7 @@
                 <input matInput [(ngModel)]="queryName" formControlName="name" placeholder="Søge Navn" value="">
 
 
-                <mat-hint>Navn på din forspørgsel</mat-hint>
+                <mat-hint>Navn på din søgning</mat-hint>
                 <mat-error *ngIf="name.invalid || name.touched">
                     HEY DU DER! DU MÅ KUN BRUGE BOGSTAVER OG TAL!
                 </mat-error>
