--- a/angular-app/src/app/project-view/query-view/query-menu/query-menu.component.html
+++ b/angular-app/src/app/project-view/query-view/query-menu/query-menu.component.html
@@ -11,7 +11,7 @@
                 </div>
             </th>
             <th class="tableHorizontal">
-                <p class="text">Ny forespørgsel</p>
+                <p class="text">Ny søgning</p>
             </th>
         </tr>
         <tr class="clickable-row" (click)="updateQuery()" *ngIf='this.queryservice.hasQuerys'>
@@ -21,7 +21,7 @@
                 </div>
             </th>
             <th class="tableHorizontal">
-                <p class="text">Opdater forespørgsel</p>
+                <p class="text">Opdater søgning</p>
             </th>
         </tr>
         <tr class="clickable-row" (click)="exportQuery()" *ngIf='this.queryservice.hasQuerys'>
@@ -31,7 +31,7 @@
                 </div>
             </th>
             <th class="tableHorizontal">
-                <p class="text">Eksporter forespørgsel</p>
+                <p class="text">Eksporter søgning</p>
             </th>
         </tr>
     </table>
