--- a/angular-app/src/app/new-project-view/new-project-description/new-project-description.component.html
+++ b/angular-app/src/app/new-project-view/new-project-description/new-project-description.component.html
@@ -1,6 +1,6 @@
 <div class="center">
   <form>
-    <h2>Beskriv dit projekt</h2>
+    <h2>{{this.newprojectservice.headerProjectName}}</h2>
     <br>
     <mat-form-field class="textTitle" hintlabel="Max 25 tegn">
       <input matInput #input maxlength="25" placeholder="Projekt titel" value="" name="projectName"
@@ -17,6 +17,6 @@
     </mat-form-field>
     <br /><br /><br />
     <button mat-raised-button type="submit" color="accent" value="{{this.newprojectservice.nextButton}}" id="confirmBttn" name=""
-      (click)="buttonClicked()">Videre </button>
+      (click)="buttonClicked()">{{this.newprojectservice.nextButton}}</button>
   </form>
 </div>
