--- a/angular-app/src/app/project-view/query-type-selection-view/query-type-selection-view.component.html
+++ b/angular-app/src/app/project-view/query-type-selection-view/query-type-selection-view.component.html
@@ -3,13 +3,13 @@
     <app-project-navigation></app-project-navigation>
     <div class="buttoncontainer">
         <div class="buttons">
-            <button (click)="openDialog()" mat-raised-button>Standard forespørgsel</button>
-            <p style="padding-top:4px">Henter alt tilgængelig data fra facebook, fra alle grupper tilhørende
+            <button (click)="openDialog()" mat-raised-button>Standard søgning</button>
+            <p style="padding-top:4px">Henter alt tilgængelig data fra facebook, fra alle grupper tilhørende det valgte
                 projekter</p>
         </div>
         <div class="buttons">
-            <button routerLink="/project_ny_soegning_brugerdef" mat-raised-button>Brugerdefineret forespørgsel</button>
-            <p style="padding-top:4px">Specificer din forespørgsel før data bliver hentet fra Facebook</p>
+            <button routerLink="/project_ny_soegning_brugerdef" mat-raised-button>Brugerdefineret søgning</button>
+            <p style="padding-top:4px">Specificer din søgning før data bliver hentet fra Facebook</p>
         </div>
     </div>
 
