Removed consoles, now translating the parameters to dansk

--- a/angular-app/src/app/project-view/query-view/query-menu/query-menu.component.html
+++ b/angular-app/src/app/project-view/query-view/query-menu/query-menu.component.html
@@ -21,7 +21,7 @@
                 </div>
             </th>
             <th class="tableHorizontal">
-                <p class="text">Opdater søgning</p>
+                <p class="text">Gentag søgning</p>
             </th>
         </tr>
         <tr class="clickable-row" (click)="exportQuery()" *ngIf='this.queryservice.hasQuerys'>
