Basic CSS + Export buttons added!

--- a/angular-app/src/app/navigation/navigation.component.html
+++ b/angular-app/src/app/navigation/navigation.component.html
@@ -1,5 +1,5 @@
 <mat-toolbar color="primary" class="navigationBar">
-    <button mat-raised-button color="accent" (click)="goBack()">Gå tilbage</button>
+    <button mat-raised-button class="buttonNavigation" color="accent" (click)="goBack()">Gå tilbage</button>
 
     <div class="mainLogo">
         <img (click)="routeToHome()" src="assets/logos/name.svg ">
@@ -7,7 +7,7 @@
     <span class="example-fill-remaining-space"></span>
     <div class="optOutContainter">
         <div class="personName">{{name}}</div>
-        <button mat-raised-button color="warn" (click)="logoutOfFacebook()">Log ud</button>
+        <button mat-raised-button color="warn" class="buttonNavigation" (click)="logoutOfFacebook()">Log ud</button>
     </div>
 
 </mat-toolbar>
