--- a/angular-app/src/app/new-project-view/new-project-overview/new-project-overview.component.html
+++ b/angular-app/src/app/new-project-view/new-project-overview/new-project-overview.component.html
@@ -1,5 +1,7 @@
 <div id="wrapper">
-  
+
+    <p class="titleOverview">Projekt Overblik</p>
+
     <div class="descView">
       <h2>Projekt titel:</h2>
       <br />
