--- a/angular-app/src/app/project-view/query-view/query-menu/query-menu.component.html
+++ b/angular-app/src/app/project-view/query-view/query-menu/query-menu.component.html
@@ -24,7 +24,8 @@
                 <p class="text">Gentag søgning</p>
             </th>
         </tr>
-        <tr class="clickable-row" (click)="exportQuery()" *ngIf='this.queryservice.hasQuerys'>
+        <!--<tr class="clickable-row" (click)="exportQuery()" *ngIf='this.queryservice.hasQuerys'>-->
+        <tr class="clickable-row" (click)="openDialog()" *ngIf='this.queryservice.hasQuerys'>
             <th>
                 <div class="icon">
                     <img class="logo" src="assets/logos/Logos-03.svg">
