--- a/angular-app/src/app/navigation/navigation.component.css
+++ b/angular-app/src/app/navigation/navigation.component.css
@@ -24,14 +24,17 @@
   text-align: center;
 }
 .mainLogo{
-  width: 60%;
+  width: 100%;
   text-align: center;
-  /* position: absolute; */
-  cursor: pointer;
+   position: absolute;
+}
+.buttonNavigation{
+  z-index: 4000;
 }
 .mainLogo img{
   height: 100%;
   max-width: 250px;
+  cursor: pointer;
 }
 
 
