--- a/angular-app/src/app/project-view/query-view/query-menu/exportDialog.html
+++ b/angular-app/src/app/project-view/query-view/query-menu/exportDialog.html
@@ -9,6 +9,6 @@
     </div>
     <div class="buttonFull">
         <p>Hent fuld post</p>
-        <button mat-raised-button color="primary">JSON</button>
+        <button (click)="exportJSON()" mat-raised-button color="primary">JSON</button>
     </div>
 </div>
