--- a/angular-app/src/app/project-view/query-view/query-menu/exportDialog.html
+++ b/angular-app/src/app/project-view/query-view/query-menu/exportDialog.html
@@ -5,7 +5,7 @@
     </div>
     <div class="buttonFull">
         <p>Hent kommentarer</p>
-        <button mat-raised-button color="primary">CSV</button>
+        <button (click)="exportComments()" mat-raised-button color="primary">CSV</button>
     </div>
     <div class="buttonFull">
         <p>Hent fuld post</p>
