--- a/angular-app/src/app/home-view/new-project/new-project.component.html
+++ b/angular-app/src/app/home-view/new-project/new-project.component.html
@@ -1,3 +1,7 @@
-<button class="newProject"
-    (click)="this.newprojectservice.ViewingNewProject=true;this.newprojectservice.NewProject=true;createNewProject()">Opret
-    nyt projekt</button>
+<div>
+    <button class="newProject" mat-raised-button color="primary"
+            (click)="this.newprojectservice.ViewingNewProject=true;this.newprojectservice.NewProject=true;createNewProject()">
+        Opret
+        nyt projekt
+    </button>
+</div>
