--- a/angular-app/src/app/navigation/navigation.component.html
+++ b/angular-app/src/app/navigation/navigation.component.html
@@ -2,7 +2,7 @@
     <button mat-raised-button class="buttonNavigation" color="accent" (click)="goBack()">Gå tilbage</button>
 
     <div class="mainLogo">
-        <img (click)="routeToHome()" src="assets/logos/name.svg ">
+        <img (click)="routeToHome()" src="assets/logos/Logos-02.png ">
     </div>
     <span class="example-fill-remaining-space"></span>
     <div class="optOutContainter">
