--- a/angular-app/src/app/navigation/navigation.component.html
+++ b/angular-app/src/app/navigation/navigation.component.html
@@ -1,5 +1,5 @@
 <mat-toolbar color="primary" class="navigationBar">
-    <button mat-raised-button class="buttonNavigation" color="accent" (click)="goBack()">Gå tilbage</button>
+    <button mat-raised-button class="buttonNavigation" color="warn" (click)="goBack()">Gå tilbage</button>
 
     <div class="mainLogo">
         <img (click)="routeToHome()" src="assets/logos/name.svg ">
