--- a/angular-app/src/app/new-project-view/new-project-description/new-project-description.component.html
+++ b/angular-app/src/app/new-project-view/new-project-description/new-project-description.component.html
@@ -1,6 +1,7 @@
 <div class="center">
   <form>
-    <h2>{{this.newprojectservice.headerProjectName}}</h2>
+    <p class="headerText">{{this.newprojectservice.headerProjectName}}</p>
+    <hr>
     <br>
     <mat-form-field class="textTitle" hintlabel="Max 25 tegn">
       <input matInput #input maxlength="25" placeholder="Projekt titel" value="" name="projectName"
