--- a/angular-app/src/app/new-project-view/new-project-groups/new-project-groups.component.html
+++ b/angular-app/src/app/new-project-view/new-project-groups/new-project-groups.component.html
@@ -1,7 +1,9 @@
 <div class="wrapper" *ngIf='showList'>
+
+  <p class="headerText">Tilføj Grupper til projekt</p>
+  <hr>
+
   <form>
-
-
     <div class="divContainer" id="leftBox">
       <div>
         <h4>Tilgængelige grupper</h4>
