--- a/angular-app/src/app/new-project-view/new-project-groups/new-project-groups.component.css
+++ b/angular-app/src/app/new-project-view/new-project-groups/new-project-groups.component.css
@@ -1,14 +1,17 @@
 #confirmBttn {
-    height: 60px;
-    width: 110px;
+    width: 100%;
+}
+.headerText{
+    margin-top: 25px;
+    font-size: 25px;
+    font-weight: bold;
 }
 
 .buttonContainer {
     position: absolute;
     align-content: center;
-    margin-top: 33%; 
+    bottom: 0;
     width: 100%;
-    margin-left: 35%;
 }
 
 .wrapper {
@@ -40,17 +43,17 @@
 .card{
     cursor: pointer;
     background-color:rgb(87, 152, 196);
-    height: 13vh;
-    padding-left: 5%
+    min-height: 50px;
+    justify-content: center;
+    align-items: center;
 }
 .mat-card{
     padding:0;
-    margin-bottom: 5%;
+    margin-bottom: 10px;
 
 }
 .content{
     width:90%;
-    height: 45vh;
     align-content: center;
     overflow: hidden;
 }
