--- a/angular-app/src/app/home-view/new-project/new-project.component.html
+++ b/angular-app/src/app/home-view/new-project/new-project.component.html
@@ -1,4 +1,4 @@
-<div>
+<div class="buttonContainer">
     <button class="newProject" mat-raised-button color="primary"
             (click)="this.newprojectservice.ViewingNewProject=true;this.newprojectservice.NewProject=true;createNewProject()">
         Opret
