--- a/angular-app/src/app/loading-view/loading-view.component.html
+++ b/angular-app/src/app/loading-view/loading-view.component.html
@@ -1,3 +1,8 @@
+<div class="CustomCenter">
+  <div class="wrapper">
 <p>
   {{customTitle}}
 </p>
+<img src="assets/logos/load.svg">
+  </div>
+</div>
