--- a/angular-app/src/app/home-view/new-project/new-project.component.css
+++ b/angular-app/src/app/home-view/new-project/new-project.component.css
@@ -1,8 +1,11 @@
 .newProject{
-    width: 40%;
-    height: 300px;
-    margin-left: auto;
-    margin-right: auto;
-    display: block;
-    margin-top: 50px;
+    width: 60%;
+    height: 350px;
+    font-size: 30px;
+}
+.buttonContainer{
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
