--- a/angular-app/src/app/project-view/query-view/query-parameters/query-parameters.component.html
+++ b/angular-app/src/app/project-view/query-view/query-parameters/query-parameters.component.html
@@ -14,5 +14,5 @@
         <p><b>Tags: </b> <a *ngFor='let filter of this.QueryParams.filter.tags'>#{{filter}} </a></p>
     </div>
 
-    <p><b>Antal posts: </b>{{amountOfPosts}}</p>
+    <p *ngIf='amountOfPosts !== 0'><b>Antal posts: </b>{{amountOfPosts}}</p>
 </div>
