--- a/angular-app/src/app/new-project-view/new-project-description/new-project-description.component.css
+++ b/angular-app/src/app/new-project-view/new-project-description/new-project-description.component.css
@@ -25,13 +25,18 @@
 
 #confirmBttn {
 
-    height: 70px;
+    height: 100%;
     width: 100%;
 }
 .buttonContainer{
-    width: 100%;
-    bottom: 0;
+    width: 99%;
+    bottom: 5px;
     position: absolute;
+    height: 12%;
+    left: 0;
+    right: 0;
+    margin-right: auto;
+    margin-left: auto;
 
 }
 
