--- a/angular-app/src/app/new-project-view/new-project-overview/new-project-overview.component.css
+++ b/angular-app/src/app/new-project-view/new-project-overview/new-project-overview.component.css
@@ -10,7 +10,16 @@
   font-weight: bold;
   text-align: center;
 }
-
+.buttonContainer {
+  width: 99%;
+  bottom: 5px;
+  position: absolute;
+  height: 12%;
+  left: 0;
+  right: 0;
+  margin-right: auto;
+  margin-left: auto;
+}
 .rightBox {
   width: 50%;
 }
@@ -18,11 +27,8 @@
   text-align: center;
 }
 #confirmBttn {
-  height: 50px;
   width: 100%;
-  position: fixed;
-  bottom: 0px;
-  right: 0px;
+  height: 100%;
 }
 
 #wrapper {
