--- a/angular-app/src/app/new-project-view/new-project-overview/new-project-overview.component.html
+++ b/angular-app/src/app/new-project-view/new-project-overview/new-project-overview.component.html
@@ -35,10 +35,10 @@
     </div>
 
   </div>
-  <div id="buttonContainer">
-    <form>
+  <div class="buttonContainer">
+
       <button mat-raised-button type="submit" color="accent" value="{{this.newprojectservice.makeProjectButton}}"
         id="confirmBttn" name="" (click)="createProject()">{{this.newprojectservice.makeProjectButton}}</button>
-    </form>
+
   </div>
 </div>
