--- a/angular-app/src/app/project-view/query-view/query-parameters/query-parameters.component.html
+++ b/angular-app/src/app/project-view/query-view/query-parameters/query-parameters.component.html
@@ -1,4 +1,5 @@
 <div>
+    <p class="paramHead">Søge Oplysninger</p>
     <p> <b>Navn:</b> {{QueryParams.name}}</p>
     <p><b>Søgeparametre:</b> <a *ngFor='let params of QueryParams.params'>#{{params}} </a></p>
     <div *ngIf="QueryParams.timeperiod.from !=='' && QueryParams.timeperiod.till !==''">
