--- a/angular-app/src/app/project-view/query-view/query-view.component.css
+++ b/angular-app/src/app/project-view/query-view/query-view.component.css
@@ -2,6 +2,10 @@
     display: table-cell;
    
 }
+.wrapper{
+
+}
+
 .query-menu {
     display: table-cell;
    
@@ -15,10 +19,13 @@
     width: 20%;
 }
 #gridContainer{
-    float: right;
+
+    display: inline-block;
     width: 70%;
     padding: 20px;
 }
+
+
 .wrapper{
     width: 100%;
     height: 100%;
@@ -28,5 +35,6 @@
     float: left;
     padding: 20px;
     width: min-content;
+    border-right: solid thin lightgrey;
 
 }
