--- a/angular-app/src/app/project-view/query-view/query-visual-view/query-visual-view.component.html
+++ b/angular-app/src/app/project-view/query-view/query-visual-view/query-visual-view.component.html
@@ -1,1 +1,4 @@
-<app-query-visual></app-query-visual>
+<p class="VisHed">Word Cloud</p>
+<div class="visBod">
+    <app-query-visual></app-query-visual>
+</div>
