--- a/angular-app/src/app/project-view/query-setting-view/query-setting-view.component.html
+++ b/angular-app/src/app/project-view/query-setting-view/query-setting-view.component.html
@@ -19,17 +19,15 @@
             <h2>Søge Parametrer</h2>
 
             <div class="fullsizeFormElement">
-                <div class="halfWidth">
+                <div class="halfWidth" style="float: none; margin: 0 auto">
                     <mat-checkbox class="example-margin" [formControl]="postsCheck">Opslag</mat-checkbox>
                     <mat-checkbox class="example-margin" [formControl]="commentsCheck">Kommentarer</mat-checkbox>
-                    <mat-checkbox class="example-margin" [formControl]="likesCheck">Likes</mat-checkbox>
                     <mat-checkbox class="example-margin" [formControl]="reactionsCheck">Reaktioner</mat-checkbox>
-                    <mat-checkbox class="example-margin" [formControl]="picturesCheck">Billeder</mat-checkbox>
                     <mat-checkbox class="example-margin" [formControl]="linksCheck">Links</mat-checkbox>
                 </div>
-                <div class="halfWidth">
+                <!--<div class="halfWidth">-->
 
-                </div>
+                <!--</div>-->
             </div>
 
             <h2>Søge Indstillinger</h2>
