--- a/angular-app/src/app/project-view/query-view/query-menu/exportDialog.html
+++ b/angular-app/src/app/project-view/query-view/query-menu/exportDialog.html
@@ -10,5 +10,6 @@
     <div class="buttonFull">
         <p>Hent fuld post</p>
         <button (click)="exportJSON()" mat-raised-button color="primary">JSON</button>
+        <!--<a class="btn btn-clear" title="Download JSON" [href]="downloadJsonHref" download="download.json"></a>-->
     </div>
 </div>
