--- a/angular-app/src/app/project-view/project-navigation/project-navigation.component.css
+++ b/angular-app/src/app/project-view/project-navigation/project-navigation.component.css
@@ -6,6 +6,7 @@
     padding: 3px;
     border: solid black thin;
     border-spacing: 10px;
+    cursor: pointer;
     /* padding-left: 20px */
 }
 .icon img{
