--- a/angular-app/src/app/project-view/query-view/query-visual-view/query-visual-view.component.html
+++ b/angular-app/src/app/project-view/query-view/query-visual-view/query-visual-view.component.html
@@ -1,4 +1,7 @@
-<p class="VisHed">Word Cloud</p>
+<p class="VisHed">Word Cloud  </p> 
+<p *ngIf='this.queryservice.stopWordsActive === true'>Med stopord</p>
+<p *ngIf='this.queryservice.stopWordsActive !== true'>Uden stopord</p>
+
 <div class="visBod">
     <app-query-visual></app-query-visual>
 </div>
